--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@ body {
   min-height: 100vh;
 }
 
+.container {
+  clear: both;
+  margin: auto;
+  max-width: 1280px;
+}
+
 .nav_container {
   position: fixed;
   top: 0;
@@ -89,7 +95,7 @@ body {
   background-color: #ffffff;
 }
 
-.container {
+.bg1 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,9 +111,64 @@ body {
   text-align: center;
 }
 
-.container > div {
+.bg1 .left_content {
   flex: 1;
-  background: #ffffffe5;
-  backdrop-filter: blur(10px);
+  /* background: #ccc; */
+  /* backdrop-filter: blur(10px); */
   height: 100vh;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+  gap: 30px;
+  padding: 20px;
 }
+
+.bg1 > div .big_text {
+  font-size: clamp(30px, 4vw, 60px);
+  text-align: left;
+  width: 100%;
+  font-weight: 700;
+}
+
+.bg1 > div p {
+  width: 100%;
+  text-wrap: wrap;
+  text-align: left;
+  font-size: 16px;
+}
+
+.bg1 {
+  background: url(/assets/img/28.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.topfake {
+  width: 100%;
+  height: 100px;
+}
+
+.container .right_content {
+  flex: 1;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+
+.right_content .image_cont img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button;
