--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
 }
 
 .bg1 {
-  background: url(/img/28.png) no-repeat;
+  background: url(/https://kingayo12.github.io/landingpages.github.io/img/28.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
